# loop_closing_slam

./: .gitignore  CMakeLists.txt  CMakeLists.txt_copy  run_demo.bash
data/: cheetah_orbb.dbow3  fileindex.csv
include/: CvoLoopClosing.hpp  KeyFrame.hpp  LoopClosingTool.hpp
loop_closing/: CMakeLists.txt  package.xml
loop_closing/experiment/: LoopClosureTestLoader.cpp  LoopClosureTestLoader.h
loop_closing/experiment/ROS/: LoopClosingManager.cpp  LoopClosingManager.hpp
loop_closing/include/: Keyframe.hpp  LoopClosureParam.h  util.h
loop_closing/src/: LoopClosingTool.cpp  camera.cpp  kitti_test.cpp  util.cpp
loop_closing/yaml/: test.yaml
loop_closing_ros/: CMakeLists.txt  CMakeListscp.txt  package.xml
loop_closing_ros/cfg/: Loopclosing.cfg
loop_closing_ros/include/: Keyframe.hpp  LoopClosingManager.hpp  LoopClosingTool.hpp  LoopClosureParam.h  Matchdata.hpp  RegistrationTool.h  RobustMatcher.h  camera.h  config.h  landmark_manager.h  util.h
loop_closing_ros/src/: LoopClosingMain.cpp  LoopClosingManager.cpp  LoopClosingTool.cpp  RegistrationTool.cpp  camera.cpp  landmark_manager.cpp  main.cpp  test.cpp  util.cpp
script/: compare.py
src/: CvoLoopClosing.cpp  KeyFrame.cpp  LoopClosingTool.cpp  kitti_test.cpp  test.cpp
test/: ICPtest.py  OpticalFlowTest.py  groundtruthflowFrontend.txt  landmarkManager.py  loopClosureTest.py  mapinitializationTest.py  pointcloudview.py  requirement.txt  test.g2o  windowTest.py
